--- a/app/app.component.css
+++ b/app/app.component.css
@@ -34,3 +34,35 @@
     margin-top:20px;
     margin-bottom:20px;
 }
+
+.inline{
+    display: inline;
+    width: auto;
+}
+
+
+.info-row{
+  border-bottom: 1px solid rgba(200,200,200,0.3);
+  text-align:left;
+  font-size:12px;
+  width:50%;
+}
+
+.info-value{
+  text-align:middle;
+    display: inline; 
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.info-title{
+  padding-left:5px;
+  width: 30%;
+    display: inline-table;
+}
+
+.content-title{
+    font-size: 50px;
+    text-align: right;
+    font-weight: bold;
+}
