--- a/app/roulette.component.html
+++ b/app/roulette.component.html
@@ -1,4 +1,4 @@
-<i (click)="startTimba()" class="fa fa-play nedle"></i>
+<i class="fa fa-play nedle"></i>
 <div id="roulette">
     <div class="countDown" style="    font-size: 24px;
     top: 178px;
