--- a/app/user-session.component.html
+++ b/app/user-session.component.html
@@ -6,10 +6,11 @@
 
   <div class="session-buttons">
     <div class="btn-group">
-      <button type="button" class="btn btn-default" (click)="showMenu = !showMenu"><i class="fa fa-user" style="margin-right:5px"></i>  {{services.user.email}}</button>
+      <button type="button" class="btn btn-default user" [class.open]="showMenu" (click)="showMenu = !showMenu"><i class="fa fa-user" style="margin-right:5px"></i>  {{services.user.email}}</button>
       <button *ngIf="showMenu && services.user.admin" (click)="notifyClose();showMenu = false" type="button" class="btn btn-default"><i class="fa fa-envelope"></i></button>
       <button *ngIf="showMenu && services.user.admin" (click)="closeTimba();showMenu = false" type="button" class="btn btn-default"><i class="fa fa-times"></i></button>
       <button *ngIf="showMenu && services.user.admin" (click)="startTimba();showMenu = false" type="button" class="btn btn-default"><i class="fa fa-play"></i></button>
+      <button type="button" (click)="return.emit('menu');showMenu = false" class="btn btn-default"><i class="fa fa-bars"></i></button>
       <button type="button" (click)="return.emit('rules');showMenu = false" class="btn btn-default"><i class="fa fa-info"></i></button>
       <button type="button" (click)="logOut.emit();showMenu = false" class="btn btn-default"><i class="fa fa-power-off"></i></button>
     </div>
