--- a/app/app.component.css
+++ b/app/app.component.css
@@ -66,3 +66,6 @@
     text-align: right;
     font-weight: bold;
 }
+.table-striped>tbody>tr:nth-child(odd)>td, .table-striped>tbody>tr:nth-child(odd)>th{
+    background-color:#333;
+}
