--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,12 +1,12 @@
-<roulette *ngIf="!services.exception && services.timba.running && !services.timba.winner"></roulette>
+<roulette *ngIf="!services.exception && services.timba.running && services.playing"></roulette>
 
-<div *ngIf="!isMobile" [class.bg-blur]="(services.nav !='dashboard' || (services.timba.running && !services.timba.winner)) && services.user.email "
+<div *ngIf="!isMobile" [class.bg-blur]="(services.nav !='dashboard' || (services.timba.running && services.playing)) && services.user.email "
  class="intro-header">
 	<!-- HOME -->
 	<home *ngIf="!services.user.email"></home>
 
 	<!-- Main Section -->
-	<section *ngIf="!services.exception && services.user.email && (services.timba.winner || !services.timba.running)"
+	<section *ngIf="!services.exception && services.user.email && (!services.playing || !services.timba.running)"
 	 id="about" style="height:100%">
 		<!-- User Session -->
 		<user-session (return)="services.nav = $event" (logOut)="services.logout();"></user-session>
@@ -32,7 +32,7 @@
 					</div>
 
 					<!-- 3 Bet -->
-					<div class="row" style="height:20%">
+					<div class="row" style="height:20%;margin-top:30px">
 						<bet style="display:block" [@fadeState]="fadeState"></bet>
 					</div>
 				</div>
@@ -61,7 +61,7 @@
 
 <!-- MODALES -->
 
-<div *ngIf="!services.exception && services.user.email && services.nav != 'dashboard'" class="timba-modal">
+<div *ngIf="!services.exception && services.user.email && services.nav != 'dashboard' && services.nav != 'bet' && services.nav != 'info'" class="timba-modal">
 	<div class="modal-content">
 		<button (click)="services.nav='dashboard'" class="btn btn-default btn-lg" style="float:right;margin-right:-30px"><i  class="fa fa-times"></i></button>
 
@@ -104,9 +104,9 @@
 
 		<!-- Winner -->
 		<div *ngIf="services.nav=='winner'" style="display:initial">
-			<h3>¡Felicitaciones!</h3>
+			<h3 style="text-align: center;font-size:30px;">¡Felicitaciones!</h3>
 			<div class="modal-incontent">
-				<p>Ganador: {{services.timba.winner}}</p>
+				<p style="text-align: center;font-size: 60px;">{{services.timba.winner}}</p>
 				<p>Premio: $ {{services.getTotalAmount()}}</p>
 				<p>Apuesta: $ {{services.getWinnerAmount()}}</p>
 			</div>
@@ -145,12 +145,12 @@
 								<div class="inline" style="width:45px;display:inline-block">$ {{balanceRequest * services.timba.betAmount}}</div>
 								<button (click)="balanceRequest= balanceRequest - 1" class="btn btn-sm btn-primary inline"><i class="fa fa-minus"></i></button>
 								<button (click)="balanceRequest= balanceRequest + 1" class="btn btn-sm btn-primary inline"><i class="fa fa-plus"></i></button>
-								<button (click)="sendBalanceRequest()" class="btn btn-sm btn-primary inline">Enviar</button>
+								<button *ngIf="balanceRequest > 0" (click)="sendBalanceRequest()" class="btn btn-sm btn-primary inline">Enviar</button>
 							</div>
 							<div *ngIf="services.user.balanceRequest != 0">
 								Enviado
 								<div class="inline" style="width:45px;display:inline-block">$ {{services.user.balanceRequest * services.timba.betAmount}}</div>
-								<button (click)="cancelBalanceRequest(services.user)" class="btn btn-sm btn-primary inline">Cancelar</button>
+								<button (click)="cancelBalanceRequest(services.user);" class="btn btn-sm btn-primary inline">Cancelar</button>
 							</div>
 						</div>
 					</div>
@@ -185,18 +185,22 @@
 						<thead>
 							<th>Fecha</th>
 							<th>Ganador</th>
+							<th>Apuesta ganador</th>
+							<th>Premio</th>
 							<th>Jugadores</th>
 						</thead>
 						<tr *ngFor="let timba of timbas">
 							<td>{{timba.date | date}}</td>
 							<td>{{timba.winner}}</td>
+							<td>$ {{getWinnerAmount(timba)}}</td>
+							<td>$ {{getTotalAmount(timba)}}</td>
 							<td>{{timba.players.length}} jugadores</td>
 						</tr>
 					</table>
 				</div>
 				<div *ngIf="menu=='admin'">
 
-					<table style="width:100%" class="">
+					<table style="width:50%;float:right" class="table-striped">
 						<thead>
 							<th>Usuario</th>
 							<th>Saldo</th>
@@ -204,7 +208,7 @@
 							<th>Solicitud</th>
 							<th></th>
 						</thead>
-						<tr *ngFor="let user of users | orderBy : ['email']">
+						<tr *ngFor="let user of users">
 							<td>{{user.email}}</td>
 							<td>$ {{user.balance * services.timba.betAmount}}</td>
 							<td>
@@ -213,8 +217,8 @@
 							</td>
 							<td>$ {{user.balanceRequest * services.timba.betAmount}}</td>
 							<td>
-								<button (click)="cancelBalanceRequest(user)" class="btn btn-primary"><i class="fa fa-times"></i></button>
-								<button (click)="approveBalanceRequest(user);" class="btn btn-primary"><i class="fa fa-check"></i></button>
+								<button (click)="cancelBalanceRequest(user)" class="btn btn-primary" [class.btn-danger]="user.balanceRequest > 0"><i class="fa fa-times"></i></button>
+								<button (click)="approveBalanceRequest(user);" class="btn btn-primary" [class.btn-success]="user.balanceRequest > 0"><i class="fa fa-check"></i></button>
 							</td>
 						</tr>
 					</table>
@@ -233,7 +237,7 @@
 
 
 <!-- ERROR -->
-<div *ngIf="services.exception && services.user.email" class="timba-modal" style="width:30%">
+<div *ngIf="!services.exception && !services.timba && services.user.email" class="timba-modal" style="width:30%">
 	<div class="modal-content" style="height:30%;background-color:rgba(255,0,0,0.7)">
 		<h3>Connection loss</h3>
 
@@ -277,7 +281,7 @@
 					</div>
 				</div>
 			</div>
-			<div style="position:fixed;width:100%;top:50%">
+			<div style="position:fixed;width:100%;top:20%">
 				<div class="col-xs-12">
 					<cursor (showOrHide)="showOrHide($event)" *ngIf="services.user.email"></cursor>
 				</div>
